--- a/jianli/WebContent/html/jianli.html
+++ b/jianli/WebContent/html/jianli.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="main">
-		<div class="head">
+		<header>
 			<div class="headright">
 				 <ul>
 					<li class="phone"> 
@@ -26,9 +26,9 @@
 					<h3>俞偲笳</h3>
 					<p>个人简历</p>
 			</div>
-			</div>
+			</header>
 			<div class="line"></div>
-			<div class="foot">
+			<footer>
             <div class="left">
 			<div class="profile">
 				<h1>PROFILE 基本资料</h1>
@@ -113,7 +113,7 @@
 					</div>
 				</li> 
 			</ul> 
-			</div>
+			</footer>
 		</div>
 </body>
 </html>
